style: change position icons dektop and mobile

--- a/store/blocks/desktop/components/header/header-row__bottom--container.jsonc
+++ b/store/blocks/desktop/components/header/header-row__bottom--container.jsonc
@@ -15,6 +15,15 @@
       "blockClass": "container-logo"
     }
   },
+  "logo#mobile": {
+    "props": {
+      "title": "Logo",
+      "href": "/",
+      "url": "assets/img/header/adidas_logo.png",
+      "width": "50",
+      "blockClass": "container__logo--mobile"
+    }
+  },
   "flex-layout.col#spacer__desktop-one": {
     "title": "spacer header one",
     "props": {
@@ -42,9 +51,12 @@
   "flex-layout.row#header__bottom--user" : {
     "title" : "header bottom-row user section",
     "children" : [
-      "modal-trigger#example",
-      "image#home__user--favourites" ,
-      "minicart.v2"
+      // "modal-trigger#example",
+      // "icon#home__user--favorites"  ,
+      // "minicart.v2"
+      "flex-layout.row#icon__desktop--profile",
+      "flex-layout.col#icon__desktop--favorites",
+      "flex-layout.col#icon__desktop--cart"
     ],
     "props" : {
       "blockClass" : "header__bottom--user",
@@ -52,16 +64,36 @@
       "colGap" : 7
     }
   },
+  "flex-layout.col#icon__desktop--cart": {
+    "children": [
+      "minicart.v2#desktop__minicart--icon"
+    ],
+    "props": {
+      "blockClass": "icon__desktop--cart"
+    }
+  },
+  "flex-layout.row#icon__desktop--profile": {
+    "children": [
+      "modal-trigger#example"
+    ],
+    "props": {
+      "blockClass": "icon__desktop--profile",
+      "paddingRight": 0
+    }
+  },
+  "flex-layout.col#icon__desktop--favorites": {
+    "children": [
+      "icon#home__user--favorites"
+    ],
+    "props": {
+      "blockClass": "icon__desktop--favorites"
+    }
+  },
   "modal-trigger#example": {
     "children": [
-      "icon#home__user--login" ,
+      "icon#home__user--login",
       "modal-layout#example"
     ]
-  },
-  "rich-text#example": {
-    "props": {
-      "text": "Click me"
-    }
   },
   "modal-layout#example": {
     "children": [
@@ -74,4 +106,5 @@
       "defaultOption" : 0
     }
   }
+
 }
