--- a/store/blocks/global/screen/home.jsonc
+++ b/store/blocks/global/screen/home.jsonc
@@ -2,11 +2,7 @@
   "store.home": {
     "title": "Store home",
     "blocks": [
-      "responsive-layout.desktop#home__section-1",
-      "responsive-layout.tablet#home__section-1",
-      "responsive-layout.phone#home__section-1",
-      "responsive-layout.mobile#phone__and__tablet",
-      "flex-layout.row#home__section--global"
+      "info-card#one","info-card#two","rich-text#desktop__text--shields", "flex-layout.row#desktop__shields", "search-result-layout.customQuery#home__search"
     ]
   }
 }
