--- a/store/blocks/desktop/components/header/header.jsonc
+++ b/store/blocks/desktop/components/header/header.jsonc
@@ -119,6 +119,9 @@
     "blocks": [
         "drawer-trigger#mobile__icon--search"
     ],
+    "props": {
+      "slideDirection": "rightToLeft"
+    },
     "children": [
         "search-bar"
     ],
