--- a/store/blocks/desktop/components/header/header__section-one.jsonc
+++ b/store/blocks/desktop/components/header/header__section-one.jsonc
@@ -4,7 +4,7 @@
     "props": {
       "textAlignment": "CENTER",
       "textPosition": "CENTER",
-      "text": "Suscríbete en adiClub y obtén 15% de descuento. Únete ya",
+      "text": "Suscríbete en adiClub y obtén 15% de descuento. [Únete ya](https://developers.vtex.com/vtex-developer-docs/docs/welcome)",
       "textColor": "c-on-emphasis",
       "font": "action--small",
       "blockClass": "help-message"
