--- a/store/blocks/desktop/components/minicart/minicart.jsonc
+++ b/store/blocks/desktop/components/minicart/minicart.jsonc
@@ -2,24 +2,30 @@
   "minicart.v2#desktop__minicart--icon": {
     "props": {
       "variation": "drawer",
-      "itemcountMoe": "total",
+      "itemcountMode": "total",
       "blockClass": "desktop__minicart--icon"
     },
     "children": [
-      "minicart-base-content"
+      "minicart-base-content#minicart__base--content"
     ]
   },
-  "minicart-base-content": {
+  "minicart-base-content#minicart__base--content": {
     "blocks": ["minicart-empty-state"],
     "children": [
       "minicart-product-list",
       "flex-layout.row#minicart__footer"
-    ]
+    ],
+    "props": {
+      "blockClass": "minicart__base--content"
+    }
   },
   "minicart-empty-state": {
     "children": [
       "flex-layout.row#minicart__empty"
-  ]
+  ],
+  "props": {
+    "blockClass": "minicart__empty--state"
+  }
   },
   "flex-layout.row#minicart__empty": {
     "children": [
@@ -36,7 +42,8 @@
     "props": {
       "text": "Hola, tu carrito esta vacio.",
       "tetxAlignment": "CENTER",
-      "textPosition": "CENTER"
+      "textPosition": "CENTER",
+      "blockClass": "minicart__empty--text"
     }
   },
   "flex-layout.row#minicart__footer": {
@@ -45,6 +52,7 @@
       "minicart-checkout-button"
     ]
   }
+
 
 
 }
