--- a/store/blocks/global/screen/home.jsonc
+++ b/store/blocks/global/screen/home.jsonc
@@ -2,7 +2,12 @@
   "store.home": {
     "title": "Store home",
     "blocks": [
-      "info-card#one","info-card#two","rich-text#desktop__text--shields", "flex-layout.row#desktop__shields", "search-result-layout.customQuery#home__search"
+      "info-card#one",
+      "info-card#two",
+      "rich-text#desktop__text--shields",
+      "flex-layout.row#desktop__shields",
+      // "search-result-layout.customQuery#home__search",
+      "flex-layout.row#home__shelf"
     ]
   }
 }
