--- a/manifest.json
+++ b/manifest.json
@@ -48,7 +48,8 @@
     "vtex.add-to-cart-button": "0.x",
     "vtex.search": "1.x",
     "vtex.store-icons": "0.x",
-    "vtex.modal-layout": "0.x"
+    "vtex.modal-layout": "0.x",
+    "vtex.product-list": "0.x"
   },
   "peerDependencies": {
     "vtex.mega-menu": "2.x"
