--- a/store/blocks/desktop/components/home/home.jsonc
+++ b/store/blocks/desktop/components/home/home.jsonc
@@ -35,7 +35,7 @@
         },
         "infinite": true,
         "showNavigationArrows": "desktopOnly",
-        "blockClass": "carousel"
+        "blockClass": "carousel_home"
       }
     },
 
@@ -43,7 +43,8 @@
           "children": [
             "product-summary-image#product__image",
             "product-summary-name#product__name",
-            "product-rating-inline#product__rating",
+            // "product-rating-inline#product__rating",
+            "product-summary-space#product__space",
             "product-summary-price#product__price",
             "add-to-cart-button#product__button"
           ]
@@ -59,9 +60,14 @@
         "blockClass":"product__name"
       }
     },
-    "product-rating-inline#product__rating": {
+    // "product-rating-inline#product__rating": {
+    //   "props": {
+    //     "blockClass":"product__rating"
+    //   }
+    // },
+    "product-summary-space#product__space": {
       "props": {
-        "blockClass":"product__rating"
+        "blockClass":"product__space"
       }
     },
     "product-summary-price#product__price":{
